--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>尚硅谷会员登录页面</title>
+    <title>尚硅谷会员登录页面111</title>
     <link type="text/css" rel="stylesheet" th:href="@{/static/css/style.css}" />
   </head>
   <body>
